# GridFinder

./: .gitignore  CMakeLists.txt  Problematic-Lines.md  README.md  matrix  py-matrix  setup.py  utilities
Images/: TestWorstCase.xcf
Python/: FindSquare.ipynb  Untitled.ipynb  Untitled1.ipynb  VideoLines.py
Scripts/: Install-GridFinder.sh  Install-Python-ARMv7.sh  Install-Python.sh
cmake.example/: GoogleTest-CMakeLists.txt.in
doc/: Doxyfile
grid-finder/: CMakeLists.txt
grid-finder/include/: Angle.hpp  Bresenham.hpp  CenterPointOutLineIterator.hpp  GridFinder.hpp  GridFinderNew.hpp  HelperStructs.hpp  Line.hpp  Pixel.hpp  uint.hpp
grid-finder/src/: Bresenham.cpp
grid-finder/test/: CMakeLists.txt  TestMask.hpp  test-Angle.cpp  test-Bresenham.cpp  test-CenterPointOutLineIterator.cpp  test-GridFinder.cpp  test-Line.cpp  tmp.cpp
py-grid-finder/: CMakeLists.txt
py-grid-finder/include/: Grid-Finder.module.hpp
src/: CMakeLists.txt  matrix  py-matrix  utilities
src/grid-finder/include/: Angle.hpp  Bresenham.hpp  CenterPointOutLineIterator.hpp  GridFinder.hpp  Line.hpp  Pixel.hpp
src/grid-finder/test/: CMakeLists.txt  test-Angle.cpp  test-Bresenham.cpp  test-CenterPointOutLineIterator.cpp  tmp.cpp
src/py-grid-finder/include/: Grid-Finder.module.hpp
src/py-grid-finder/src/: Grid-Finder.module.cpp
